# synesthesia

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  Synesthesia.desktop  config.h.in  configure  configure.ac  gui-init.c  gui-init.h  main.c  opengl-backend.c  opengl-backend.h  port-input.c  port-input.h  preferences.c  pulse-backend.c  pulse-backend.h  pulse-input.c  pulse-input.h  shaders.c  shaders.h  synesthesia-app-window.c  synesthesia-app-window.h  synesthesia-app.c  synesthesia-app.h  synesthesia.c  synesthesia.gresource.xml  synesthesia.h
resources/settings/: com.coptinet.synesthesia.gschema.xml
resources/shaders/: f.glsl  v.glsl
resources/ui/: logo.xcf  menu.ui  preferences.ui  separate.ui  shaders.ui  styles.css  synesthesia.ui
src/: generic-input.c  generic-input.h  main.c  opengl-backend.c  port-input.c  port-input.h  preferences.c  preferences.h  pulse-input.c  pulse-input.h  shaders.c  synesthesia-app-window.c  synesthesia-app-window.h  synesthesia-app.c  synesthesia-app.h
